--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Basel Mahmoud | Full Stack Software Developer Portfolio showcasing my skills and projects in web, mobile, and software development.">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="css/mobile.css" media="only screen and (max-width: 768px)">    
+    <link rel="stylesheet" href="css/test.css" media="only screen and (max-width: 768px)">    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css" rel="stylesheet">
@@ -190,9 +190,9 @@
                     <p>Phone: <a href="tel:+201061785781">+201061785781</a></p>
                     <p>Location: Ismailia, Egypt</p>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.github.com" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
-                        <a href="https://www.twitter.com" target="_blank" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/basel-ibrahim-869b2a250/" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Basel-Ibrahim" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                        <a href="https://x.com/Thetrueichigo15" target="_blank" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
