--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Basel Mahmoud | Full Stack Software Developer Portfolio showcasing my skills and projects in web, mobile, and software development.">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="css/test.css" media="only screen and (max-width: 768px)">    
+    <link rel="stylesheet" href="css/mobile.css" media="only screen and (max-width: 768px)">    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/devicon@2.14.0/devicon.min.css" rel="stylesheet">
